text overlay overlap correction

--- a/src/App.scss
+++ b/src/App.scss
@@ -211,7 +211,7 @@ body {
   font-family: "Avenir Next", sans-serif;
   font-weight: 300;
   font-size: 18px;
-  margin-top: -15px;
+
   width: 50vw;
 }
 
